feature_size_scan/logs/build_ENABLE_MESSENGER_0.log
CC external/printf/printf.c
CC init.c
CC driver/adc.c
CC driver/backlight.c
CC driver/bk4819.c
CC driver/eeprom.c
CC driver/gpio.c
CC driver/i2c.c
CC driver/keyboard.c
CC driver/spi.c
CC driver/st7565.c
CC driver/system.c
CC driver/systick.c
CC app/action.c
CC app/app.c
CC app/chFrScanner.c
CC app/common.c
CC app/dtmf.c
CC app/generic.c
CC app/main.c
CC app/menu.c
CC app/scanner.c
CC audio.c
CC bitmaps.c
CC board.c
CC dcs.c
CC font.c
CC frequencies.c
CC functions.c
CC helper/battery.c
CC helper/boot.c
CC misc.c
CC radio.c
CC scheduler.c
CC settings.c
CC ui/battery.c
CC ui/helper.c
CC ui/inputbox.c
CC ui/main.c
CC ui/menu.c
CC ui/scanner.c
CC ui/status.c
CC ui/ui.c
CC ui/welcome.c
CC version.c
CC main.c
CC driver/aes.c
CC driver/crc.c
CC driver/uart.c
CC app/aircopy.c
CC app/uart.c
app/uart.c: In function 'UART_IsCommandAvailable':
app/uart.c:560:40: error: 'TX_MSG_LENGTH' undeclared (first use in this function)
  560 |                         char txMessage[TX_MSG_LENGTH + 4];
      |                                        ^~~~~~~~~~~~~
app/uart.c:560:40: note: each undeclared identifier is reported only once for each function it appears in
app/uart.c:568:33: error: implicit declaration of function 'MSG_Send' [-Wimplicit-function-declaration]
  568 |                                 MSG_Send(txMessage, false);
      |                                 ^~~~~~~~
app/uart.c:560:30: error: unused variable 'txMessage' [-Werror=unused-variable]
  560 |                         char txMessage[TX_MSG_LENGTH + 4];
      |                              ^~~~~~~~~
cc1: all warnings being treated as errors
make: *** [Makefile:487: _build/app/uart.o] Error 1
